# Hackthon_mathmorphosis

./: app.py  feedback_log.json  pyproject.toml  requirements.txt  start.bat  start.sh
data/processed/: preprocessing_dados_institucional.ipynb
data/processed/Cursos2024/: Analise_cursos2024.ipynb
data/processed/EAD2025/: preprocessing_dados_ead2025.ipynb  processed_ead_2025.csv  processed_erros_ead_2025.csv
data/processed/Institucional2025/: preprocessing_dados_institucional.ipynb
data/processed/Presencial2025/: preprocessing_dados_presencial.ipynb  processed_erros_presencial_2025.csv  processed_presencial_2025.csv
data/raw/: dados_institucional_perguntas.csv
data/raw/Cursos2024_dados_raw/: dados_cursos2024.csv  info_dimensoes_cursos2024.csv  info_perguntas_cursos2024.csv  info_questionario_cursos2024.csv
data/raw/EAD2025_dados_raw/: dados_cursos2025.csv  dados_disciplinas2025.csv  dados_ead_pesquisa2025.csv  info_dimensoes_ead.csv  info_dimensoes_ead2025.csv  info_perguntas_ead2025.csv  info_questionario_ead2025.csv
data/raw/Institucional2025_dados_raw/: dados_institucional_info_perguntas2025.csv  dados_institucional_info_questionarios2025.csv  dados_institucional_perguntas.csv  dados_institucional_perguntas2025.csv  dados_institucional_unidades2025.csv
services/: AvaliacaoDasDisciplinas.py  AvaliacaoDasDisciplinasService.py  AvaliacaoInstitucionalService.py  AvalicaoDosCursosService.py  DataLoader.py  HomeService.py  LoginService.py
view/: avaliacao_das_disciplinas.py  avaliacao_dos_cursos.py  avaliacao_institucional.py  home.py  login.py
(+10 files in other folders)
