[project]
name = "hackaton-2025"
version = "0.1.0"
description = "Primary version of the dashboard using streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==5.5.0",
    "attrs==25.4.0",
    "blinker==1.9.0",
    "cachetools==6.2.2",
    "carousel>=0.3.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "idna==3.11",
    "ipykernel>=7.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markupsafe==3.0.3",
    "narwhals==2.12.0",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "plotly>=6.5.0",
    "protobuf==6.33.1",
    "pyarrow==21.0.0",
    "pydeck==0.9.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.29.0",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "statsmodels>=0.14.5",
    "streamlit==1.51.0",
    "streamlit-carousel>=1.1.2",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
]
